--- a/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
+++ b/rootdir/system/etc/firmware/wlan/prima/WCNSS_qcom_cfg.ini
@@ -27,7 +27,7 @@ InfraUapsdBeSrvIntv=0
 InfraUapsdBkSrvIntv=0
 
 # Disable RSSI FW filtering
-gEnableFWRssiMonitoring=0
+gEnableFWRssiMonitoring=1
 
 # Make 1x1 the default antenna configuration
 gNumRxAnt=1
@@ -44,6 +44,12 @@ gEnableApProt=1
 
 #Enable OBSS protection
 gEnableApOBSSProt=1
+
+#Enable TrafficMonitor
+gEnableTrafficMonitor=1
+
+#Set TracfficIdleTimeout
+gTrafficIdleTimeout=3000
 
 #Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
@@ -72,11 +78,11 @@ g11dSupportEnabled=0
 # CCX Support and fast transition
 CcxEnabled=0
 FastTransitionEnabled=0
-ImplicitQosIsEnabled=0
+ImplicitQosIsEnabled=1
 gNeighborScanTimerPeriod=200
 
-gNeighborLookupThreshold=70
-gNeighborReassocThreshold=75
+gNeighborLookupThreshold=50
+gNeighborReassocThreshold=55
 
 gNeighborScanChannelList=1,11,36,64
 gNeighborScanChannelMinTime=20
@@ -89,7 +95,7 @@ gMaxNeighborReqTries=3
 FastRoamEnabled=0
 
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
-#Checking is disabled if set to Zero.Otherwise it will use this value as to how better
+#Checking is disabled if set to Zero.Otherwise it will use this value as to how better 
 #the RSSI of the new/roamable AP should be for roaming
 RoamRssiDiff=0
 
@@ -134,7 +140,7 @@ gApAutoChannelSelection=0
 #
 #  Range Loss  (dB)  =  EDET threshold level (dBm) + 97 dBm.
 #
-gEnablePhyAgcListenMode=9
+gEnablePhyAgcListenMode=128
 
 #Preferred channel to start BT AMP AP mode (0 means, any channel)
 BtAmpPreferredChannel=0
@@ -174,7 +180,7 @@ gCountryCodePriority=1
 gReportMaxLinkSpeed=1
 
 # Enable Automatic Tx Power control
-gEnableAutomaticTxPowerControl=0
+gEnableAutomaticTxPowerControl=1
 
 #Enable CLPC mode
 gEnableCloseLoop=1
@@ -205,7 +211,7 @@ gEnableBmps=1
 # Listen interval
 # This needs to be higher than any expected DTIM value, otherwise
 # the module will not follow the APs DTIM value.
-gBmpsModListenInterval=12
+gBmpsModListenInterval=8
 
 # Enable suspend or not
 # 1: Enable standby, 2: Enable Deep sleep, 3: Enable Mcast/Bcast Filter
@@ -214,7 +220,7 @@ gEnableSuspend=3
 # Flags to filter Mcast abd Bcast RX packets.
 # Value 0: No filtering, 1: Filter all Multicast.
 # 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
-McastBcastFilter=3
+McastBcastFilter=0
 
 # Multicast filtering in firmware
 gMCAddrListEnable=1
@@ -227,11 +233,14 @@ gNthBeaconFilter=50
 # BET is only active during suspend
 enableBeaconEarlyTermination=1
 # Beacon interval to rerun TSF if BET is active
-beaconEarlyTerminationWakeInterval=20
+beaconEarlyTerminationWakeInterval=10
 
 # How long to stay awake after last tx/rx activity. Value in ms.
 # Default = 20. Increased value improves throughput.
-gDataInactivityTimeout=240
+gDataInactivityTimeout=120
+
+#If set to 0, MCC is not allowed.
+gEnableMCCMode=1
 
 # Flag to enable HostARPOffload feature or not
 hostArpOffload=1
@@ -247,7 +256,13 @@ gTelescopicBeaconWakeupEn=0
 #telescopicBeaconTransListenInterval
 
 #Wake up on every x DTIM when in sleep
-gEnableModulatedDTIM=10
+gEnableModulatedDTIM=2
+
+ConnectivityThresholdDBM=-87
+
+# If set to 1, generate the p2p device address from primary mac address
+# with the locally administered bit set
+isP2pDeviceAddrAdministrated=1
 
 END
 # Note: Configuration parser would not read anything past the END marker
