--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -259,3 +259,8 @@ service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     group system qcom_oncrpc
     disabled
     oneshot
+
+service qcom-sh /system/bin/sh /init.qcom.sh
+    class late_start
+    user root
+    oneshot
