blue: Add irsc_util service and sec_config file
Change-Id: I0342fb77c7e9dfc3e662e6810c5f699648e9315c

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -259,3 +259,9 @@ service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     group system qcom_oncrpc
     disabled
     oneshot
+
+# IRSC
+service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
+    class main
+    user root
+    oneshot
