--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -104,6 +104,9 @@ on post-fs-data
     write /sys/module/subsystem_restart/parameters/max_restarts 8
     write /sys/module/subsystem_restart/parameters/max_history_time 1000
 
+    # Create /data/time folder for time-services
+    mkdir /data/time/ 0700 system system
+
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
 
