--- a/rootdir/init.sony.rc
+++ b/rootdir/init.sony.rc
@@ -251,3 +251,16 @@ service illumination /system/bin/illumination_service
     socket illumination stream 0660 root system
     class main
     user root
+
+# Time daemon
+service time_daemon /system/bin/time_daemon
+    class late_start
+    user root
+    group root
+
+# WCNSS WiFi Service
+service wcnss-service /system/bin/wcnss_service
+    class late_start
+    user system
+    group system wifi
+    oneshot
