--- a/rootdir/init.sony.rc
+++ b/rootdir/init.sony.rc
@@ -253,3 +253,9 @@ service wcnss-service /system/bin/wcnss_service
     user system
     group system wifi
     oneshot
+
+# start GNSS/Sensor interface daemon
+service gsiff_daemon /system/bin/gsiff_daemon
+    class late_start
+    user system
+    group gps qcom_oncrpc net_raw
