blue: Add irsc_util service and sec_config file
Change-Id: I0342fb77c7e9dfc3e662e6810c5f699648e9315c

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -264,3 +264,9 @@ service qcom-sh /system/bin/sh /init.qcom.sh
     class late_start
     user root
     oneshot
+
+# IRSC
+service irsc_util /system/bin/logwrapper /system/bin/irsc_util "/etc/sec_config"
+    class main
+    user root
+    oneshot
