get faster gps fix
it use google supl host

Change-Id: I3dee9bf795beac9af89739fc0fcf6dc74347abf3

--- a/rootdir/system/etc/gps.conf
+++ b/rootdir/system/etc/gps.conf
@@ -14,7 +14,7 @@ XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra2.bin
 ERR_ESTIMATE=0
 
 #Test
-NTP_SERVER=time.gpsonextra.net
+NTP_SERVER=pool.gpsonextra.net
 #Asia
 # NTP_SERVER=asia.pool.ntp.org
 #Europe
@@ -51,8 +51,8 @@ CAPABILITIES=0x13
 ################################
 
 # FOR SUPL SUPPORT, set the following
-SUPL_HOST=supl.sonyericsson.com
-SUPL_PORT=7275
+SUPL_HOST=supl.google.com
+SUPL_PORT=7276
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
